fixed spacing and added full menu button

--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -93,7 +93,7 @@ hr {
   }
   #menu.d-flex .p-2 {
     width: 100%;
-    height: 404px;
+    height: 463px;
     margin-right: 0px;
     margin-top: 41px;
   }
